--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lenis": "^1.3.3",
     "motion": "^12.9.5",
     "next": "15.3.1",
     "react": "^19.0.0",
