--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "gsap": "^3.13.0",
+    "hamburger-react": "^2.5.2",
     "lenis": "^1.3.3",
     "motion": "^12.15.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.5",
